@@ -425,6 +425,7 @@ partmap/sun.c
 term/gfxterm.c
 term/terminfo.c
 term/tparm.c
+term/usb_keyboard.c
 term/efi/console.c
 term/i386/vga_common.c
 term/i386/pc/at_keyboard.c
